--- a/connectfour.css
+++ b/connectfour.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: sans-serif;
 }
 
 .column {
@@ -42,4 +43,11 @@ body {
     margin: 15px;
     padding: 10px;
     font-size: 25px;
+}
+
+#winner {
+    font-size: 25px;
+    margin: 15px;
+    padding: 5px;
+    border-radius: 5px;
 }
