--- a/connectfour.css
+++ b/connectfour.css
@@ -60,6 +60,7 @@ h1 {
     font-size: 25px;
     border-radius: 10px;
     font-weight: bold;
+    background-color: rgb(156, 216, 253);
 }
 
 #winner {
@@ -67,4 +68,5 @@ h1 {
     margin: 15px;
     padding: 5px;
     border-radius: 10px;
+    background-color: rgb(156, 216, 253);
 }
